tests/ui/issues/issue-44239.stderr
error[E0435]: attempt to use a non-constant value in a constant
  --> $DIR/issue-44239.rs:8:26
   |
LL |         const N: usize = n;
   |                          ^ non-constant value
   |
help: consider using `const` instead of `let`
   |
LL -     let n: usize = 0;
LL +     const n: usize = 0;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0435`.
